--- a/plugins/ColorChat/config.yml
+++ b/plugins/ColorChat/config.yml
@@ -14,7 +14,7 @@ Locked:
   - "&c&oLocked"
 
 # If the required permission is set, it will display "UnLocked".
-Unlocked:
+UnLocked:
   - "&a&oUnlocked"
 
 # Plugin Version - DO NOT CHANGE
